# media-tool

./: .gitignore  .pre-commit-config.yaml  README.md  integration_results.txt  ki_prompt.txt  media-tool.example.toml  media-tool.toml  movies_to_improve.py  mypy.ini  output.mkv.backup  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: mypy.yml
docs/: HARDWARE_ENCODING.md  architecture.md
docs/design-decisions/: backup-validation-and-rollback.md  naming-strategy-and-library-layout.md  translation-backend-abstraction.md  upscaling-profiles-and-hardware-selection.md
docs/internals/: backup-system.md  configuration-loading.md  external-tool-wrappers.md  provider-patterns.md  statistics-system.md
docs/modules/: audio.md  audiobook.md  audit.md  download.md  ebook.md  jellyfin.md  metadata.md  subtitles-translation.md  video.md  workflow.md
docs/pipelines/: ebook-pipeline.md  jellyfin-metadata-pipeline.md  subtitle-pipeline.md  workflow-pipeline.md
scripts/: run_mypy_hook.py
src/backup/: __init__.py  backup_index.py  backup_manager.py  models.py  rollback_engine.py  storage_guard.py
src/cli/: __init__.py  audio_cmd.py  audiobook_cmd.py  audit_cmd.py  backup_cmd.py  convert_cmd.py  download_cmd.py  ebook_cmd.py  inspect_cmd.py  jellyfin_cmd.py  main.py  merge_cmd.py  metadata_cmd.py  progress_display.py  stats_cmd.py  subtitle_cmd.py  upscale_cmd.py  video_cmd.py  workflow_cmd.py
src/core/: __init__.py  converter.py  main.py  upscaler.py
src/obsolet_ps_scrips/: DVD_h265_720p_improvment.ps1  GEZ_downlod_to_mkv.ps1  clean_up_all_movies.ps1  convert_movie_to_mkv.ps1  data_csv_from_nas.ps1  de_en_serie_language.ps1  download_trailer.ps1  englisch_and_german_movie.ps1  mkv_to_everything.ps1  video_list.ps1
src/statistics/: __init__.py  event_types.py  stats_collector.py  stats_manager.py  stats_models.py  stats_persistence.py
src/utils/: __init__.py  audio_analyzer.py  audio_processor.py  audio_sampler.py  calibre_runner.py  chromaprint_runner.py  config.py  epub_reader.py  epub_writer.py  ffmpeg_runner.py  ffprobe_cache.py  ffprobe_runner.py  file_operations.py  fuzzy_matcher.py  image_processor.py  image_utils.py  jellyfin_naming.py  logging_config.py  mutagen_tagger.py  pdf_reader.py  progress.py  url_validator.py  video_hasher.py  ytdlp_runner.py
tests/: API_CONSISTENCY_AUDIT.md  API_CONSISTENCY_AUDIT_FINAL.md  API_CONSISTENCY_COMPLETE.md  API_CONSISTENCY_COMPLETION.md  API_CONSISTENCY_COMPLETION_FINAL.md  API_CONSISTENCY_IMPROVEMENTS.md  CODE_CHANGES_DETAILED.md  __init__.py  cleanup_test_artifacts.py  conftest.py  ebook_test_support.py  output.mkv.backup
tests/fixtures/: __init__.py  media_generator.py
tests/integration/: __init__.py  conftest.py  test_audio.py  test_audiobook.py  test_convert.py  test_converter_integration.py  test_download_integration.py  test_ebook_calibre_integration.py  test_ebook_normalization_workflow.py  test_inspect.py  test_merge.py  (+10 more)
(+268 files in other folders)
