[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-tool"
version = "0.1.0"
description = "Automated media processing for Jellyfin / NAS storage (video, audio, music, audiobooks)."
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "ffmpeg-python>=0.2",
    "watchdog>=4",
    "pydantic>=2",
    # openai-whisper and torch are optional heavy deps — install separately
    # "openai-whisper",
    # "torch",
    "pysubs2>=1.7",
    # "PySide6",  # future GUI — install separately
    "mutagen>=1.47",  # For advanced audio metadata
    "faster-whisper>=1.0",  # For GPU-accelerated Whisper transcription
    "requests>=2.31.0",  # For OpenSubtitles API
    "pyacoustid>=1.1",  # AcoustID fingerprint lookup
    "musicbrainzngs>=0.7",  # MusicBrainz metadata lookup
    "yt-dlp>=2024.11.0",  # Downloader backend for web media sources
]

[project.optional-dependencies]
translation-gpu = [
    "ctranslate2>=4.0",
    "transformers>=4.40",
    "sentencepiece>=0.2",
]
translation-cpu = [
    "argostranslate>=1.9",
]

[project.scripts]
media-tool = "cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
